# setup-environment-EllySp

./: .gitignore  CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: smpl_dyn.h
lib/libdyn/src/: smpl_dyn.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: smpl_sta.h
lib/libsta/src/: smpl_sta.c
src/: greetings.c  logic.c  main.c
test/: CMakeLists.txt
test/unit/: unit_test_sample.c
